--- a/src/styles/blocks/beer.sass
+++ b/src/styles/blocks/beer.sass
@@ -17,25 +17,29 @@
       width: 100%
       max-width: 1280px
       justify-content: space-between
-      @media (max-width: 700px)
-        grid-template-columns: 110px  40px
+      // @media (max-width: 700px)
+      //   grid-template-columns: 110px  40px
 
     &-accent
       @include inter-semi-bold
       @include link-reset
       margin: 0
-      font-size: clamp(0.75rem, 0.4109rem + 1.5957vw, 1.6875rem)
+      font-size: clamp(1.75rem, 0.4109rem + 1.5957vw, 1.6875rem)
       transition: 0.3s
     &-price
+      display: flex
+      align-items: center
       justify-self: right
       grid-row: 1
     &-categories
+      @include inter-regular
+      color: $dark-gray
       grid-row: 2
       grid-column: 1 / 3
     &-name
       grid-row: 1
       @include amatic-bold
-      font-size: clamp(1rem, 0.5479rem + 2.1277vw, 2.25rem)
+      font-size: clamp(2rem, 0.5479rem + 2.1277vw, 2.25rem)
       &:hover
         color: $link-hover
     &-image
