--- a/src/styles/blocks/cart.sass
+++ b/src/styles/blocks/cart.sass
@@ -20,4 +20,9 @@
   &__list
     @include list-reset
     gap: 20px
-  &-item
+  &__total
+    @include inter-semi-bold
+    margin: 0
+    font-size: 20px
+    display: flex
+    justify-content: space-between
