--- a/src/styles/blocks/swiper.sass
+++ b/src/styles/blocks/swiper.sass
@@ -13,5 +13,9 @@
       @media (max-width: $mobile)
         padding-top: 40px
         padding-inline: 10px
+      & .beer__item-wrapper
+        grid-template-columns: 110px 60px
+      & .beer__item-accent
+        font-size: 22px
   &-slide
     overflow: hidden
